Clean up and optimization. Added Popovers.

--- a/HIGExampleApp/ActivityViews.storyboard
+++ b/HIGExampleApp/ActivityViews.storyboard
@@ -21,9 +21,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fk5-s0-rF6">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fk5-s0-rF6">
                                 <rect key="frame" x="118" y="318" width="139" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Toggle Activity View"/>
                                 <connections>
                                     <action selector="toggleActivityView:" destination="Qyn-GK-gkQ" eventType="touchUpInside" id="3Db-ZZ-Pm0"/>
@@ -31,6 +30,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fk5-s0-rF6" firstAttribute="centerX" secondItem="a62-yV-fPc" secondAttribute="centerX" id="42A-EV-mdK"/>
+                            <constraint firstItem="fk5-s0-rF6" firstAttribute="centerY" secondItem="a62-yV-fPc" secondAttribute="centerY" id="93P-Ct-LKd"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oDu-G4-QvZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
