--- a/HIGExampleApp/ActionSheets.storyboard
+++ b/HIGExampleApp/ActionSheets.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cl2-Op-z7B">
-                                <rect key="frame" x="118" y="88" width="138" height="30"/>
+                                <rect key="frame" x="118" y="318" width="138" height="30"/>
                                 <state key="normal" title="Toggle Action Sheet"/>
                                 <connections>
                                     <action selector="toggleActionSheet:" destination="HK8-BD-JLx" eventType="touchUpInside" id="ucE-1U-tbK"/>
@@ -31,8 +31,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Cl2-Op-z7B" firstAttribute="top" secondItem="zjO-9A-h2a" secondAttribute="bottom" constant="68" id="bea-z2-9Yr"/>
-                            <constraint firstItem="Cl2-Op-z7B" firstAttribute="centerX" secondItem="oKO-fl-0aR" secondAttribute="centerX" id="qkL-hd-eCL"/>
+                            <constraint firstItem="Cl2-Op-z7B" firstAttribute="centerX" secondItem="oKO-fl-0aR" secondAttribute="centerX" id="GK0-od-hII"/>
+                            <constraint firstItem="Cl2-Op-z7B" firstAttribute="centerY" secondItem="oKO-fl-0aR" secondAttribute="centerY" id="kaV-nB-2Tl"/>
                         </constraints>
                     </view>
                 </viewController>
