--- a/HIGExampleApp/WebViews.storyboard
+++ b/HIGExampleApp/WebViews.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ANB-gm-slT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ANB-gm-slT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Web Views-->
         <scene sceneID="pcy-XK-pln">
             <objects>
-                <viewController title="Web Views" id="ANB-gm-slT" sceneMemberID="viewController">
+                <viewController title="Web Views" id="ANB-gm-slT" customClass="WebViewController" customModule="HIGExampleApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Q3Z-5c-wwn"/>
                         <viewControllerLayoutGuide type="bottom" id="oEX-U3-dWI"/>
@@ -20,12 +20,24 @@
                     <view key="view" contentMode="scaleToFill" id="u8c-R2-tjo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dhg-P2-nVt">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Dhg-P2-nVt" firstAttribute="bottom" secondItem="oEX-U3-dWI" secondAttribute="top" id="1Ia-Ke-Ke6"/>
+                            <constraint firstItem="Dhg-P2-nVt" firstAttribute="leading" secondItem="u8c-R2-tjo" secondAttribute="leading" id="o9H-py-25M"/>
+                            <constraint firstAttribute="trailing" secondItem="Dhg-P2-nVt" secondAttribute="trailing" id="ps0-9S-Lel"/>
+                            <constraint firstItem="Dhg-P2-nVt" firstAttribute="top" secondItem="u8c-R2-tjo" secondAttribute="top" id="t6J-Dn-ixY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N9P-wp-xh0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="134" y="206"/>
+            <point key="canvasLocation" x="133.59999999999999" y="205.54722638680661"/>
         </scene>
     </scenes>
 </document>
