--- a/HIGExampleApp/NavigationBars.storyboard
+++ b/HIGExampleApp/NavigationBars.storyboard
@@ -20,7 +20,27 @@
                     <view key="view" contentMode="scaleToFill" id="wXP-bR-SwM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZgE-cr-Fd2">
+                                <rect key="frame" x="0.0" y="82" width="375" height="74"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Navigation Bar" prompt="Prompt" id="kol-id-Ykc">
+                                        <barButtonItem key="backBarButtonItem" title="Back" id="J8R-ik-0E9">
+                                            <color key="tintColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZgE-cr-Fd2" firstAttribute="top" secondItem="nT8-Ie-0mE" secondAttribute="bottom" constant="62" id="8XM-iz-1D1"/>
+                            <constraint firstItem="ZgE-cr-Fd2" firstAttribute="leading" secondItem="wXP-bR-SwM" secondAttribute="leading" id="HhJ-0z-pFo"/>
+                            <constraint firstAttribute="trailing" secondItem="ZgE-cr-Fd2" secondAttribute="trailing" id="dSH-Ix-Mhr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fm8-of-ny5" userLabel="First Responder" sceneMemberID="firstResponder"/>
