--- a/HIGExampleApp/TabBars.storyboard
+++ b/HIGExampleApp/TabBars.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +21,46 @@
                     <view key="view" contentMode="scaleToFill" id="oCF-KV-xEF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PNA-R9-fY8">
+                                <rect key="frame" x="0.0" y="480" width="375" height="187"/>
+                                <subviews>
+                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="96m-zQ-Wjg">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <items>
+                                            <tabBarItem systemItem="featured" id="Uvx-va-kHB"/>
+                                            <tabBarItem systemItem="topRated" id="ciC-rp-Ya1"/>
+                                            <tabBarItem systemItem="favorites" id="fSP-Eb-y13"/>
+                                        </items>
+                                    </tabBar>
+                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="auS-IM-s1M">
+                                        <rect key="frame" x="0.0" y="69" width="375" height="49"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <items>
+                                            <tabBarItem systemItem="contacts" id="jUR-gV-JAp"/>
+                                            <tabBarItem systemItem="search" id="pGk-ou-hga"/>
+                                            <tabBarItem systemItem="bookmarks" id="yBO-UE-1SS"/>
+                                        </items>
+                                    </tabBar>
+                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h93-qc-PkZ">
+                                        <rect key="frame" x="0.0" y="138" width="375" height="49"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <items>
+                                            <tabBarItem systemItem="recents" id="06a-Iv-FBy"/>
+                                            <tabBarItem systemItem="downloads" id="T54-hH-p7T"/>
+                                            <tabBarItem systemItem="more" id="pl3-TZ-H1E"/>
+                                        </items>
+                                    </tabBar>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7Hp-HU-FbQ" firstAttribute="top" secondItem="PNA-R9-fY8" secondAttribute="bottom" id="7xr-ZV-D3k"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PNA-R9-fY8" secondAttribute="trailing" constant="-16" id="Kcl-rJ-Rbk"/>
+                            <constraint firstItem="PNA-R9-fY8" firstAttribute="leading" secondItem="oCF-KV-xEF" secondAttribute="leadingMargin" constant="-16" id="tkz-90-SAt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BGC-U7-ivD" userLabel="First Responder" sceneMemberID="firstResponder"/>
